force-app/main/default/objects/Work_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Field to capture Application Status</description>
        <label>Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Comments__c</fullName>
        <label>Assessment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person_City__c</fullName>
        <label>Contact Person City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Email__c</fullName>
        <label>Contact Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_First_Name__c</fullName>
        <label>Contact Person First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Last_Name__c</fullName>
        <label>Contact Person Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Phone__c</fullName>
        <label>Contact Person Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Phone_c__c</fullName>
        <description>Duplicate field - do not use</description>
        <inlineHelpText>Duplicate field - do not use</inlineHelpText>
        <label>Contact_Person_Phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person_PostalCode__c</fullName>
        <label>Contact Person PostalCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_State__c</fullName>
        <label>Contact Person State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Street__c</fullName>
        <label>Contact Person Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Experiences (Contact Person)</relationshipLabel>
        <relationshipName>Work_Experiences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Experiences</relationshipLabel>
        <relationshipName>Work_Experiences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Work Experiences</relationshipLabel>
        <relationshipName>Work_Experiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Experiences</relationshipLabel>
        <relationshipName>Work_Experiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <businessOwnerGroup>Sys_Admin</businessOwnerGroup>
        <description>External ID for external clients - will be the name of the Work Experience record</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Count__c</fullName>
        <description>Roll up summary to determine if the record has been reference with the previous application</description>
        <label>Reference Count</label>
        <summaryForeignKey>Application_Work_Experience_Provided__c.Work_Experience__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Work Experience</label>
    <nameField>
        <displayFormat>WEX-{000000}</displayFormat>
        <label>Work Experience ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>